Adding prometheus